refact: java 버전 안맞아서 오류났던 부분 해결 + 중복 json 코드 통일