@@ -32,7 +32,7 @@ public class MapPanel extends JFrame {
   private static final String SNOWBOX_API_KEY = "596765645667796f37336a497a4c4c";
   private static final String SNOWBOX_ENDPOINT = "https://api.odcloud.kr/api/15086762/v1/uddi:b2f84553-0a08-4d35-b444-f2a9b0324c04";
 
-  private static final String LOCAL_JSON_PATH = "서울시 제설함 위치정보.json";
+  private static final String LOCAL_JSON_PATH = "client/public/data/seoul_snowbox_location.json";
   private static final boolean USE_LOCAL_FILE = true;
 
   private static final int MAP_WIDTH = 800;
@@ -269,10 +269,10 @@ public class MapPanel extends JFrame {
       String json;
 
       if (USE_LOCAL_FILE) {
-        json = Files.readString(Paths.get(LOCAL_JSON_PATH), StandardCharsets.UTF_8);
+        json = readAll(Files.newInputStream(Paths.get(LOCAL_JSON_PATH)));
       } else {
         String url = SNOWBOX_ENDPOINT + "?page=1&perPage=1000&returnType=JSON&serviceKey="
-            + URLEncoder.encode(SNOWBOX_API_KEY, StandardCharsets.UTF_8);
+            + URLEncoder.encode(SNOWBOX_API_KEY, "UTF-8");
 
         HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
         conn.setRequestMethod("GET");
